syntax = "proto3";

option csharp_namespace = "Auth.GRPC";
option go_package = "./proto_gen";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterReply);
  rpc Login (LoginRequest) returns (LoginReply);
  rpc Logout (LogoutRequest) returns (LogoutReply);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenReply);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterReply {
  string refreshToken = 1;
  string accessToken = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  string refreshToken = 1;
  string accessToken = 2;
}

message LogoutRequest {
  string refreshToken = 1;
}

message LogoutReply {
  bool isSuccess = 1;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenReply {
  string accessToken = 1;
}